searchbar functionality updated

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
 
     <!-- icon -->
-    <link rel="icon" href="shopnow_logo.png" type="image/x-icon" />
+    <!-- <link rel="icon" href="shopnow_logo.png" type="image/x-icon" /> -->
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
