--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"
-      rel="stylesheet"
-    />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Spectral+SC:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Spectral+SC:wght@200&display=swap"
       rel="stylesheet"
     />
     <link
